fixed hero image sizing so it hopefully displays on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,7 +58,7 @@ section p {
 /* the hero image */
 .hero-image {
     background-image: var(--heroimage);
-    height: 100%;
+    height: 45vh;
     padding-bottom: 1rem;
     margin: 0;
 
@@ -265,6 +265,7 @@ p.code-refactor {
     line-height: 2.5rem;
     font-size: 3rem;
     font-weight: 600;
+    white-space: nowrap;
     text-shadow: var(--text-shadow-white), var(--text-shadow-dblue);
 
 }
@@ -276,7 +277,22 @@ p.other-projects {
     line-height: 3rem;
     font-size: 2rem;
     font-weight: 600;
+    white-space: nowrap;
     text-shadow: var(--text-shadow-white), var(--text-shadow-dblue);
+
+}
+
+/* Font Styling for other projects placeholder */
+
+p.other-projects-placeholder {
+
+    text-align: center;
+    line-height: 3rem;
+    font-size: 2rem;
+    font-weight: 600;
+    white-space: nowrap;
+    color: var(--color);
+    text-shadow: var(--text-shadow), var(--text-shadow-cyan);
 
 }
 
